# llama-node

./: .gitignore  .gitmodules  .npmignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE.MD  LICENSE-MIT.MD  README-zh-CN.md  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
.github/: FUNDING.yml
.github/workflows/: llama-build.yml
@llama-node/: core.darwin-arm64.node  core.darwin-x64.node  core.linux-x64-gnu.node
__test__/: index.spec.mjs  test.ts
example/: chat.ts  embedding.ts  inference.ts  package-lock.json  package.json  tokenize.ts  tsconfig.json
example/js/langchain/: langchain.js
example/js/llama-cpp/: abortable.js  embedding.js  inference.js  llama-cpp.js  tokenize.js
example/js/llama-rs/: abortable.js  embedding.js  inference.js  tokenize.js
example/llama-cpp/: embedding.ts  llama-cpp.ts  tokenize.ts
example/llama-rs/: embedding.ts  llama-rs.ts  tokenize.ts
example/semantic-compare/: compare.py  dog1.json
miscellaneous/models/: convert.py
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: artifacts.ts  cross-compile.ts  version.ts
src/: index.bak  index.ts  lib.rs  llama.rs  llm.d.ts  llm.ts
src/extensions/: langchain.ts
src/llm/: llama-cpp.ts  llama-rs.ts  llm-rs.ts  rwkv-cpp.ts  type.ts
(+35 files in other folders)
