[workspace.package]
# name = "llama-node-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "packages/core",
    "packages/llama-cpp",
    "packages/rwkv-cpp"
]

[profile.release]
lto = true