[workspace.package]
# name = "llama-node-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "packages/hf-tokenizer",
    "packages/core",
    "packages/llama-cpp",
    "packages/rwkv-cpp",
    "packages/common-rs"
]

[profile.release]
lto = true